--- a/res/layout/keyword_listitem_view.xml
+++ b/res/layout/keyword_listitem_view.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/keyword_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/gray"
+                android:textColor="@color/light_red"
                 android:text="0" />
         </TableRow>
     </TableLayout>
