--- a/res/layout/movie_detail_view.xml
+++ b/res/layout/movie_detail_view.xml
@@ -363,13 +363,15 @@
                 android:layout_height="wrap_content"
                 android:text="@string/description"
                 android:textColor="@color/orange"
+                android:textSize="18dip"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/detail_movie_description"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dip" />
+                android:layout_marginBottom="20dip"
+                android:textSize="16dip" />
         </LinearLayout>
     </ScrollView>
 
