--- a/res/layout/video_search_result_listitem_view.xml
+++ b/res/layout/video_search_result_listitem_view.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dip"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
 
