--- a/res/layout/channel_list_view.xml
+++ b/res/layout/channel_list_view.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/main_bg"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:id="@+id/channel_list_top_bar"
         android:layout_width="fill_parent"
         android:layout_height="50dip"
-        android:layout_marginBottom="8dip"
         android:background="@drawable/title_bar_bg"
         android:paddingTop="10dip" >
 
