--- a/res/layout/channel_video_list_view.xml
+++ b/res/layout/channel_video_list_view.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@color/main_bg" >
 
     <RelativeLayout
         android:id="@+id/channel_video_list_top_bar"
         android:layout_width="fill_parent"
         android:layout_height="50dip"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="8dip"
         android:background="@drawable/title_bar_bg"
         android:paddingTop="10dip" >
 
@@ -19,9 +19,9 @@
             android:layout_centerVertical="true"
             android:layout_margin="5dip"
             android:background="@drawable/bt_short_bg"
-            android:textColor="@drawable/bt_fg"
             android:onClick="onBack"
-            android:text="@string/sBackButton" />
+            android:text="@string/sBackButton"
+            android:textColor="@drawable/bt_fg" />
 
         <TextView
             android:id="@+id/channel_video_list_channelname"
@@ -30,7 +30,6 @@
             android:layout_centerInParent="true"
             android:text="channel name"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
     </RelativeLayout>
 
     <ListView
