--- a/res/layout/channellist.xml
+++ b/res/layout/channellist.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/list_item"
     android:descendantFocusability="blocksDescendants"
     android:gravity="center_vertical"
     android:orientation="horizontal" >
@@ -20,6 +21,7 @@
         android:layout_height="wrap_content"
         android:textSize="20dip"
         android:text="channel name"
+        android:textColor="@color/white"
         android:layout_margin="5dp" />
 
 </LinearLayout>
