--- a/res/layout/episode_listitem_view.xml
+++ b/res/layout/episode_listitem_view.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:gravity="center"
+    android:background="@drawable/list_item"
     android:orientation="vertical" >
 
     <TextView
@@ -9,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="episode number"
+        android:textColor="@color/white"
         android:textSize="15dip" />
 
 </LinearLayout>
