--- a/res/layout/home_view.xml
+++ b/res/layout/home_view.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/main_bg"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:id="@+id/home_top_bar"
         android:layout_width="fill_parent"
         android:layout_height="50dip"
-        android:layout_marginBottom="8dip"
         android:background="@drawable/title_bar_bg"
         android:paddingTop="10dip" >
 
@@ -17,8 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:background="@color/transparent"
             android:layout_margin="5dip"
+            android:background="@color/transparent"
             android:scaleType="centerInside"
             android:src="@drawable/logo" />
 
@@ -36,8 +36,8 @@
             android:layout_centerVertical="true"
             android:layout_margin="5dip"
             android:background="@drawable/bt_short_bg"
-            android:src="@drawable/search"
-            android:onClick="onSearchClick" />
+            android:onClick="onSearchClick"
+            android:src="@drawable/search" />
     </RelativeLayout>
 
     <ListView
