--- a/res/layout/more_listitem_view.xml
+++ b/res/layout/more_listitem_view.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/list_item"
     android:descendantFocusability="blocksDescendants"
     android:gravity="center_vertical"
     android:orientation="horizontal" >
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="more item name"
+        android:textColor="@color/white"
         android:textSize="20dip" />
 
 </LinearLayout>
