--- a/res/layout/play_section_view.xml
+++ b/res/layout/play_section_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res/com.ivyinfo.feiying"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/list_item"
     android:descendantFocusability="blocksDescendants"
     android:orientation="vertical" >
 
@@ -16,7 +17,7 @@
 
     <com.ivyinfo.feiying.view.FYGridView
         android:id="@+id/play_section_gridview"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnWidth="60dp"
         android:horizontalSpacing="5dp"
