--- a/res/layout/series_detail_view.xml
+++ b/res/layout/series_detail_view.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res/com.ivyinfo.feiying"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@color/main_bg" >
 
     <RelativeLayout
         android:id="@+id/detail_top_bar"
         android:layout_width="fill_parent"
         android:layout_height="50dip"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="8dip"
         android:background="@drawable/title_bar_bg"
         android:paddingTop="10dip" >
 
@@ -91,10 +91,10 @@
 
                 <View
                     android:layout_width="fill_parent"
-                    android:layout_height="2dip"
+                    android:layout_height="1dip"
                     android:layout_marginBottom="4dip"
                     android:layout_marginTop="4dip"
-                    android:background="#88ffffff" />
+                    android:background="@color/black" />
             </LinearLayout>
 
             <RelativeLayout
@@ -280,10 +280,10 @@
 
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="2dip"
+                android:layout_height="1dip"
                 android:layout_marginBottom="4dip"
                 android:layout_marginTop="4dip"
-                android:background="#88ffffff" />
+                android:background="@color/black" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -343,10 +343,10 @@
 
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="2dip"
+                android:layout_height="1dip"
                 android:layout_marginBottom="4dip"
                 android:layout_marginTop="4dip"
-                android:background="#88ffffff" />
+                android:background="@color/black" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -363,14 +363,16 @@
 
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="2dip"
+                android:layout_height="1dip"
                 android:layout_marginBottom="4dip"
                 android:layout_marginTop="4dip"
-                android:background="#88ffffff" />
+                android:background="@color/black" />
 
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="8dip"
+                android:paddingRight="8dip"
                 android:text="@string/description"
                 android:textColor="@color/orange"
                 android:textSize="18dip"
@@ -381,6 +383,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dip"
+                android:paddingLeft="8dip"
+                android:paddingRight="8dip"
                 android:textSize="16dip" />
         </LinearLayout>
     </ScrollView>
