--- a/res/layout/video_search_view.xml
+++ b/res/layout/video_search_view.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@color/main_bg" >
 
     <RelativeLayout
         android:id="@+id/video_search_top_bar"
         android:layout_width="fill_parent"
         android:layout_height="50dip"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="8dip"
         android:background="@drawable/title_bar_bg"
         android:paddingTop="10dip" >
 
@@ -65,15 +65,15 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dip"
-            android:paddingBottom="5dip"
+            android:background="#4c4747"
+            android:paddingBottom="2dip"
             android:paddingLeft="5dip"
             android:paddingRight="10dip"
+            android:paddingTop="2dip"
             android:text="@string/hot_keywords"
-            android:textStyle="bold"
-            android:background="#4c4747"
             android:textColor="#d23a3a"
-            android:textSize="20dip" />
+            android:textSize="16dip"
+            android:textStyle="bold" />
 
         <ListView
             android:id="@+id/video_keywords_list"
