--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="divider_line">#888c8d92</color>
+    <color name="divider_line">#000000</color>
 	<color name="white">#ffffff</color>
 	<color name="black">#000000</color>
 	<color name="blue">#6577e2</color>
@@ -10,4 +10,5 @@
 	<color name="gray">#707070</color>
 	<color name="transparent">#00000000</color>
 	<color name="light_red">#eab9b9</color>
+	<color name="main_bg">#3c3c3c</color>
 </resources>
