change FY1 to DZFY

--- a/res/values/configs.xml
+++ b/res/values/configs.xml
@@ -4,6 +4,6 @@
     <string name="version">1.3.5</string>
     
 	<string name="business_number">1065583398</string>
-	<string name="business_open_content">FY1</string>
+	<string name="business_open_content">DZFY</string>
 	
 </resources>
